8146537: TrayIcon Action Listener doesnt work in WIndows 10

Reviewed-by: serb, ssadetsky